update css, fix hidden logo on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-/***( GENERAL )***/
-
-
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -23,73 +20,64 @@ a {
   text-shadow: none;
 }
 
-.outer {
-  width: 100%;
-}
-
-.inner {
+header, nav, section, footer {
   position: relative;
-  max-width: 600px;
-  padding: 20px 10px;
-  padding-bottom: 0px;
   margin: 0 auto;
+  padding: 10px;
+  max-width: 600px;
 }
 
+header {
+  max-width: 764px; /* 82 px offset for logo */
+}
 
-/***( HEADER CONTENT )***/
-
-
-#header_wrap h1 {
+header h1 {
   font-size: 40px;
   margin-bottom: 25px;
 }
 
-#tabbar {
-  display: block;
+nav {
+  max-width: 620px; /* 10 px offset for tab padding */
+  padding: 0;
   font-size: large;
-  padding: 0px;
-  margin: 0px -10px;
 }
 
-#tabbar span {
+nav span {
   display: inline-block;
   vertical-align: top;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
-#tabbar span.select {
+nav span.select {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   background-color: #eee;
   color: #222;
 }
 
-#tabbar a {
+nav a {
   color: inherit;
-  padding: 0px 9px;
-  margin: 0px;
+  padding: 0 10px; /* matches section padding */
+  margin: 0;
 }
 
-
-/***( MAIN CONTENT )***/
-
-
-#main_content_wrap {
+.lightbg {
+  width: 100%;
   padding-bottom: 10px;
   background: #eee;
   color: #222;
 }
 
 h2 + .nav {
-  margin: -15px 0px 20px 0px;
+  margin: -15px 0 20px 0;
 }
 
 div + .nav {
-  margin: 40px 0px 0px 0px;
+  margin: 40px 0 0 0;
 }
 
 dl dt {
@@ -121,7 +109,8 @@ code {
 
 img.logo {
   vertical-align: middle;
-  margin-left: -80px;
+  padding-right: 10px;
+  float: left;
 }
 
 img.icon {
@@ -146,7 +135,7 @@ img.portfoliologo {
 
 .exerpt {
   margin-top: -10px;
-  padding-top: 0px;
+  padding-top: 0;
   padding-left: 30px;
 }
 
